--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-sample-plugin",
+	"id": "obsidian-naming",
 	"name": "Preferred Zettlekasten Naming Convention",
 	"version": "1.0.1",
 	"minAppVersion": "0.12.0",
